@@ -248,7 +248,7 @@ surface adjust_surface_color(const surface &surf, int r, int g, int b, bool opti
 surface greyscale_image(const surface &surf, bool optimize=true);
 surface monochrome_image(const surface &surf, const int threshold, bool optimize=true);
 surface sepia_image(const surface &surf, bool optimize=true);
-surface negative_image(const surface &surf, bool optimize=true);
+surface negative_image(const surface &surf, const int thresholdR, const int thresholdG, const int thresholdB, bool optimize=true);
 surface alpha_to_greyscale(const surface & surf, bool optimize=true);
 surface wipe_alpha(const surface & surf, bool optimize=true);
 /** create an heavy shadow of the image, by blurring, increasing alpha and darkening */
